ready to finished, plan to fine tune the wellbeing page and the insight page

--- a/DotnetFinancialTrackerApp/Components/Dialogs/EditBudgetDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/EditBudgetDialog.razor
@@ -47,7 +47,7 @@
 
     <DialogActions>
         <MudSpacer />
-        <MudButton Variant="Variant.Text" Color="Color.Secondary" Elevation="0" OnClick="@Cancel">Cancel</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Default" Elevation="0" OnClick="@Cancel">Cancel</MudButton>
         <MudButton Variant="Variant.Filled" Color="Color.Default" Elevation="0" OnClick="@Ok" Style="background-color: black; color: white;">Save</MudButton>
     </DialogActions>
 </MudDialog>
