--- a/DotnetFinancialTrackerApp/Components/Settings/SecurityTab.razor
+++ b/DotnetFinancialTrackerApp/Components/Settings/SecurityTab.razor
@@ -180,7 +180,7 @@
 </MudStack>
 
 @code {
-    [Parameter] public UserProfile? CurrentUser { get; set; }
+    [Parameter] public FamilyMember? CurrentUser { get; set; }
     [Parameter] public EventCallback OnPinUpdated { get; set; }
 
     private PinChangeModel _pinModel = new();
